--- a/Shop/ShopApp/package.json
+++ b/Shop/ShopApp/package.json
@@ -11,11 +11,13 @@
   "dependencies": {
     "@expo/vector-icons": "^12.0.0",
     "@react-navigation/bottom-tabs": "^6.0.9",
+    "@react-navigation/material-top-tabs": "^6.0.6",
     "@react-navigation/native": "^6.0.6",
     "@react-navigation/native-stack": "^6.2.5",
     "@react-navigation/stack": "^6.0.11",
     "expo": "~43.0.2",
     "expo-constants": "~12.1.3",
+    "expo-image-picker": "~11.0.3",
     "expo-splash-screen": "~0.13.5",
     "expo-status-bar": "~1.1.0",
     "expo-updates": "~0.10.13",
@@ -26,8 +28,9 @@
     "react-native-reanimated": "~2.2.0",
     "react-native-safe-area-context": "3.3.2",
     "react-native-screens": "~3.8.0",
+    "react-native-tab-view": "^3.1.1",
     "react-native-web": "0.17.1",
-    "expo-image-picker": "~11.0.3"
+    "react-native-pager-view": "5.4.6"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
